<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/notificationsGroupLabel">
        <CheckBoxPreference
                android:title="@string/NotificationLabel"
                android:defaultValue="true"
                android:key="showNotificationWorkout"/>
        <CheckBoxPreference
                android:title="@string/vibraNotifylabel"
                android:defaultValue="false"
                android:key="vibrateNotification"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/otherSettingsLabel">
        <Preference android:title="@string/gpsWorkoutSettingsLabel">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:targetPackage="br.eti.softlog.softlogtmsentregas"
                    android:targetClass="br.eti.softlog.softlogtmsentregas.SettingsActivity">
                    <extra android:name="gpsWorkoutSettings"
                    android:value="true"/>
            </intent>

        </Preference>

        <CheckBoxPreference
                android:title="@string/settingShwoWorkoutInfoTitle"
                android:summary="@string/settingShowWorkoutInfoLabel"
                android:defaultValue="false"
                android:key="showWorkoutInfo"/>
        <CheckBoxPreference
                android:title="@string/exitAlertLabel"
                android:defaultValue="true"
                android:key="exitAlert"/>
        <CheckBoxPreference
            android:title="@string/disableMapSettingLabel"
            android:defaultValue="false"
            android:key="disableMap"/>
    </PreferenceCategory>
</PreferenceScreen>
    <!--android:targetPackage="br.eti.softlog"-->